css/main.css
body {
    font-family: 'Chakra Petch', sans-serif;
    margin: 0px;
    color: #FFFFFF;
}

canvas {
    position: absolute;
    height: 100vh;
    width: 100%;
}

a {
    color: #FFFFFF
}

p {
  text-transform: uppercase;
}

button a {
  text-decoration: none;
}

img {
  max-width: 130px;
  max-height: 60px;
}

.above {
    text-align: center;
    height: 100vh;
    overflow-y: scroll;
    position: relative;
    z-index: 1;
    background-color:rgba(0, 0, 0, 0.3);
}

.btn {
    padding: 8px;
    margin-bottom: 5vh;
    border-color: #FFFFFF;
    background-color: Transparent;
    color: #FFFFFF;
    width: 20vh;
    margin-top: 3vh;
    font-family: 'Chakra Petch', sans-serif;
    font-size: 2.5vh;
    font-weight: bold;
    background-repeat:no-repeat;
}

.form-control {
    width: 65%;
}

.sponsors {
  margin-top: 20vh;
}

.subsection {
  margin-top: 8vh;
  text-decoration: underline;
  font-weight: bold;
}

.row {
  display: flex;
  margin-left: 15%;
  margin-right: 15%;
}

.column {
  flex: 50%;
  padding: 5px;
}

